--- a/itguysappv2/build.gradle
+++ b/itguysappv2/build.gradle
@@ -1,10 +1,29 @@
-buildscript {
+ buildscript {
     ext {
         compose_version = '1.1.1'
+
     }
+     repositories {
+        google()
+        mavenCentral()
+
+    }
+     dependencies {
+         // Add the dependency for the Google services Gradle plugin
+         classpath 'com.google.gms:google-services:4.3.13'
+
+     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
+
+
+ allprojects {
+     repositories {
+
+
+     }
+ }
