Opplasting før presentasjon
Fikset noe navigering, kommenterte ut  Logg inn funkjson. Forhåpentligvis så finner vi en løsning på dette snart.

Co-Authored-By: Magnus Jernberg <43038864+MJernberg@users.noreply.github.com>

--- a/itguysappv2/app/build.gradle
+++ b/itguysappv2/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
