--- a/itguysappv2/app/build.gradle
+++ b/itguysappv2/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation 'com.google.maps.android:maps-compose:2.7.2'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
